modificamos el codigo para mandar a llamar el endpoint POST, pusimos una nota en repofile para modificar el ID

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
     "scripts": {
-      "start": "nodemon index.js",
-      "mytest" : "echo 'hola'" 
-
+        "start": "nodemon index.js",
+        "mytest": "echo 'hola'"
     },
     "dependencies": {
-      "express": "^4.19.2"
+        "express": "^4.19.2",
+        "express-validator": "^7.1.0"
     },
     "devDependencies": {
-      "nodemon": "^3.1.0"
+        "nodemon": "^3.1.0"
     }
-  }
-  
+}
