--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     },
     "dependencies": {
         "express": "^4.19.2",
-        "express-validator": "^7.1.0"
+        "express-validator": "^7.1.0",
+        "mariadb": "3.3.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
